--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 
   <script>
     function startCoding() {
-      alert("Let’s go Kareenu! 🚀 You've got this.");
-      window.open("https://www.freecodecamp.org/learn", "_blank");
+      alert("Let’s go Kareenu! 🔮 You've got this.");
+      window.open("https://www.udemy.com/", "_blank");
     }
   </script>
 </body>
